Uploaded image for project: 'Lustre'
  1. Lustre
  2. LU-10366

sanity test 410 fails with 'no inode match'

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: Minor Minor
    • Lustre 2.16.0
    • Lustre 2.10.1, Lustre 2.11.0, Lustre 2.10.2, Lustre 2.12.0, Lustre 2.10.4
    • Ubuntu clients
    • 3
    • 9223372036854775807

      sanity test 410 is failing for Ubuntu clients. From the client test log, we see

      == sanity test 410: Test inode number returned from kernel thread ==================================== 23:57:31 (1512691051)
       sanity test_410: @@@@@@ FAIL: no inode match 

      dmesg and console logs don’t have any new information for this test failure.

      This failure is seen in master and b2_10 branches.

      Logs for recent failures are at
      https://testing.hpdd.intel.com/test_sets/d212dae6-dc3e-11e7-a066-52540065bddc
      https://testing.hpdd.intel.com/test_sets/a67135e2-dae3-11e7-9840-52540065bddc

            simmonsja James A Simmons
            jamesanunez James Nunez (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

              Created:
              Updated:
              Resolved: